fixed alignment of flight names and stops

--- a/src/components/FlightSearch/index.css
+++ b/src/components/FlightSearch/index.css
@@ -31,10 +31,11 @@
   flex-grow: 1;
   text-align: center;
 }
+
 .FlightGroup .FlightInfo > * {
   display: flex;
   align-items: flex-end;
-  justify-content: space-evenly;
+  justify-content: space-between;
   min-height: 1.5rem;
 }
 
